@@ -64,6 +64,8 @@
                 <div class="ib-arrow-right"></div>
                 <div class="ib-arrow-expand-left-right"></div>
                 <div class="ib-arrow-expand-right-left"></div>
+                <div class="ib-arrow-contract-left-right"></div>
+                <div class="ib-arrow-contract-right-left"></div>
             </div>
         </div>
 
