@@ -33,6 +33,8 @@
 @import "scss/arrows/arrow-right";
 @import "scss/arrows/arrow-expand-left-right";
 @import "scss/arrows/arrow-expand-right-left";
+@import "scss/arrows/arrow-contract-left-right";
+@import "scss/arrows/arrow-contract-right-left";
 
 
 /*
